# churn-prediction

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
artifact/: dummy_inference_churn_data.csv  dummy_inference_churn_drift_data.csv  lightgbm_model.pkl  train_set_reference.csv
notebook/: dummy_data.ipynb  eda.ipynb  modelling.ipynb
notebook/.ipynb_checkpoints/: eda-checkpoint.ipynb  modelling-checkpoint.ipynb
reports/019a7df8-4dd9-7097-bef6-82e4131e055a/: metadata.json
reports/019a7df8-4dd9-7097-bef6-82e4131e055a/datasets/019a7df8-54bf-79ae-ac3e-e6bca8668c04/: metadata.json  run-current-019a7df8-540e-7517-86ea-207caf160936.parquet
reports/019a7df8-4dd9-7097-bef6-82e4131e055a/datasets/019a7df8-54e5-73a5-a951-9df224324096/: metadata.json
reports/019a7df8-4dd9-7097-bef6-82e4131e055a/snapshots/: 019a7df8-540e-7517-86ea-207caf160936.json  019a7df8-540e-7517-86ea-207caf160936.links.json
reports/019a7dfa-d47e-737d-9471-35cb8955a292/: metadata.json
reports/019a7dfa-d47e-737d-9471-35cb8955a292/datasets/019a7dfa-dac5-7e99-81b5-c98026177b11/: metadata.json
reports/019a7dfa-d47e-737d-9471-35cb8955a292/snapshots/: 019a7dfa-da26-7805-993c-2af7dedc513f.links.json  019a7dfe-2934-7329-8c51-d4167e4c2be4.json  019a7dfe-2934-7329-8c51-d4167e4c2be4.links.json
src/: main.py
src/core/: container.py  load_model.py  monitoring.py  schemas.py  utils.py
src/flow/: batch_inference.py
src/task/: create_table_artifact.py  data_drift_detection.py  inference.py  load_data.py  load_reference_data.py
(+5 files in other folders)
